2005-09-15 hugo303

	* src/Makefile.am: Improved coverage analysis by running all tests
	before compiling result. Added gcc3.3 coverage bug workaround.
		
2005-09-15 hugo303

	* tests/check_check_sub.c, tests/check_check_master.c:
	Added testing of timeout set through environment variable.

2005-09-07 hugo303

	*configure.in, src/Makefile.am, tests/Makefile.am: Added gcov/lcov 
	support. Enable with 'autogen.sh --enable-gcov'.
	Run with 'cd src && make lcov'.

2005-08-30 hugo303

	* debian/README.Debian, debian/compat, debian/docs,
	debian/example_makefile, debian/examples, debian/watch:
	Added new debian files, missed in the checkin of the debian patch.
	
2005-08-30 hugo303

	* NEWS: Checked in forgotten updated NEWS file.

2005-08-22 hugo303

	* debian/changelog, debian/check.doc-base.tut, debian/check.docs,
	debian/check.postinst.debhelper, debian/check.prerm.debhelper,
	debian/control, debian/copyright, debian/dirs, debian/rules:

	Applied patch for debian files received from check debian
	maintainer Robert Lemmen.

2005-08-22 hugo303

	* src/check.h.in: Added include of stddef.h for NULL definition

2005-08-22 hugo303

	* doc/tutorial.sgml: Fixed sourceforge bug #1216502

2005-07-19 hugo303

	* tests/check_check_master.c, tests/check_check_msg.c,
	tests/check_check_sub.c, src/check.c, src/check.h.in,
	src/check_msg.c, src/check_msg.h, src/check_run.c:
	
	Refactored messaging to use the new tmpfile() method all the way,
	removing the message keys, pipes, pipe entries and pipe list. This
	makes the messaging work with forking tests, and also with threading
	tests on linux 2.4 (on 2.6 it already worked). Added check_fork and
	check_waitpid_and_exit to be used for forking tests.

2005-05-26 hugo303

	* debian/Makefile.am: Removed 'files' file from DIST

2005-03-29 hugo303

	* src/check.h.in: Fixed compatibility with gcc 2.95.3 according
	to sourceforge patch #1161654.

2005-03-02 hugo303

	* src/check.h.in: Added define for NULL if needed.

2005-03-01 hugo303
